using LifesaverHub.Models.Entities;

namespace LifesaverHub.Daos;

public interface ICategoryDao : IDao<Category>
{
    
}